--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-        <a href="https://shuzhihui.oss-cn-shenzhen.aliyuncs.com/%E9%BB%84%E8%93%9D%E5%B8%A6%E6%8C%87%E6%A0%87%E7%94%B5%E8%84%91%E5%AE%89%E8%A3%85.exe?Expires=1527765660&OSSAccessKeyId=TMP.AQEoL_YUYfl_FZ-hMLoaRZwCzbk7IvjRuio9qmZYRkI0kQSK3mblH7yzPvoBAAAwLAIUdttGoI_QrRMOifU8degE5FmhIWQCFEWWhhq8rE_-aXf4I_69qsThMGLa&Signature=1s29NfZTov08N%2FRlRNuTs3V%2BJ7k%3D">下载</a>
+    <a href="https://shuzhihui.oss-cn-shenzhen.aliyuncs.com/%E9%BB%84%E8%93%9D%E5%B8%A6%E6%8C%87%E6%A0%87%E7%94%B5%E8%84%91%E5%AE%89%E8%A3%85.exe?Expires=1527765660&OSSAccessKeyId=TMP.AQEoL_YUYfl_FZ-hMLoaRZwCzbk7IvjRuio9qmZYRkI0kQSK3mblH7yzPvoBAAAwLAIUdttGoI_QrRMOifU8degE5FmhIWQCFEWWhhq8rE_-aXf4I_69qsThMGLa&Signature=1s29NfZTov08N%2FRlRNuTs3V%2BJ7k%3D"
+        class="xiazi">下载黄蓝带软件</a>
 </body>
+
 </html>
+<style>
+    .xiazi {
+        margin: 50px auto;
+        display: block;
+        width: 100px;
+        height: 30px;
+        text-align: center;
+        line-height: 30px;
+        text-decoration: none;
+        color: #fff;
+        background-color: #5cb85c;
+        border-color: #4cae4c;
+        border-radius: 5px;
+    }
+</style>
