--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <a href="https://shuzhihui.oss-cn-shenzhen.aliyuncs.com/%E9%BB%84%E8%93%9D%E5%B8%A6%E6%8C%87%E6%A0%87%E7%94%B5%E8%84%91%E5%AE%89%E8%A3%85.exe?Expires=1527765660&OSSAccessKeyId=TMP.AQEoL_YUYfl_FZ-hMLoaRZwCzbk7IvjRuio9qmZYRkI0kQSK3mblH7yzPvoBAAAwLAIUdttGoI_QrRMOifU8degE5FmhIWQCFEWWhhq8rE_-aXf4I_69qsThMGLa&Signature=1s29NfZTov08N%2FRlRNuTs3V%2BJ7k%3D"
-        class="xiazi">下载黄蓝带软件</a>
+        class="xiazi">下载黄蓝带</a>
 </body>
 
 </html>
